--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ng2-translate": "2.5.0",
     "nvd3": "^1.8.4",
     "ontimize-web-ng2": "1.1.0",
+	"ontimize-web-ng2-charts": "1.0.0",
     "pdfmake": "^0.1.18",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
