--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ontimize-web-ng2-charts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An implementation of nvD3 for Ontimize Web Ng2",
   "scripts": {
-    "test": "tsc"
+    "test": "tsc",
+    "postinstall": "typings install"
   },
   "keywords": [
     "angular2",
@@ -21,52 +22,36 @@
   "main": "o-chart.js",
   "typings": "o-chart.d.ts",
   "peerDependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/material": "v2.0.0-alpha.10",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.0.0-rc.2",
-    "@angular/upgrade": "2.1.2",
-
-    "ontimize-web-ng2": "1.1.0",
-
-    "ng2-translate": "2.5.0",
-    "moment": "^2.13.0",
-
+    "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.7.4",
     "d3": "^3.5.6",
     "ng2-nvd3": "^1.1.3",
-    "nvd3": "^1.8.4",
-
-    "core-js": "^2.4.1",
-    "hammerjs": "^2.0.8",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.23"
+    "nvd3": "^1.8.4"
   },
   "devDependencies": {
-	  "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/material": "v2.0.0-alpha.10",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.0.0-rc.2",
-    "@angular/upgrade": "2.1.2",
-    "async": "^2.0.0-rc.5",
-	  "browserify": "^13.1.0",
+    "@angular/common": "2.4.2",
+    "@angular/compiler": "2.4.2",
+    "@angular/core": "2.4.2",
+    "@angular/forms": "2.4.2",
+    "@angular/http": "2.4.2",
+    "@angular/material": "2.0.0-beta.1",
+    "@angular/platform-browser": "2.4.2",
+    "@angular/platform-browser-dynamic": "2.4.2",
+    "@angular/router": "3.4.2",
+    "@angular/upgrade": "2.4.2",
+    "async": "^2.0.0",
+    "browserify": "^13.1.0",
     "chalk": "^1.1.3",
+    "colresizable": "1.6.0",
     "commitizen": "~2.5.0",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.12",
+    "datatables.net-buttons": "^1.2.1",
+    "datatables.net-colreorder": "^1.3.2",
+    "datatables.net-select": "^1.2.0",
     "del": "^2.2.0",
-    "d3": "^3.5.6",
-    "ng2-nvd3": "^1.1.3",
-    "nvd3": "^1.8.4",
     "event-stream": "^3.3.2",
     "express": "~4.13.4",
     "extend": "^3.0.0",
@@ -74,11 +59,15 @@
     "gulp-bump": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-debug": "^2.1.2",
     "gulp-filter": "^4.0.0",
     "gulp-inject": "^4.1.0",
+    "gulp-inject-stringified-html": "^1.0.3",
     "gulp-inline-ng2-template": "^1.1.4",
+    "gulp-insert": "^0.5.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "~1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-shell": "~0.5.2",
     "gulp-sourcemaps": "~1.6.0",
@@ -91,16 +80,22 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.6",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.0.0",
+    "jquery-ui": "^1.12.0",
     "merge-stream": "^1.0.0",
-    "moment": "^2.13.0",
-    "ng2-translate": "2.5.0",
-    "ontimize-web-ng2": "1.1.0",
+    "moment": "2.17.1",
+    "ng2-dnd": "^2.2.2",
+    "ng2-nvd3": "^1.1.3",
+    "ng2-translate": "5.0.0",
+    "nvd3": "^1.8.4",
+    "ontimize-web-ng2": "1.2.3",
     "open": "0.0.5",
+    "pdfmake": "^0.1.18",
     "phantomjs-prebuilt": "^2.1.7",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.2",
     "run-sequence": "^1.2.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "semver": "^5.1.0",
     "serve-static": "^1.10.2",
     "slash": "~1.0.0",
@@ -113,10 +108,10 @@
     "tslint-stylish": "2.1.0-beta",
     "typedoc": "^0.3.12",
     "typescript": "2.0.0",
-    "typings": "^0.8.1",
+    "typings": "0.8.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^4.7.1",
-    "zone.js": "0.6.23"
+    "zone.js": "0.7.4"
   }
 }
