--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ng2-quickstart-charts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -9,20 +9,21 @@
     "lint": "tslint \"src/**/*.ts\"",
     "format": "clang-format -i -style=file --glob=src/**/*.ts",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "production": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/material": "v2.0.0-alpha.10",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/router": "3.0.0-rc.2",
-    "@angular/upgrade": "2.1.2",
+    "@angular/common": "2.4.2",
+    "@angular/compiler": "2.4.2",
+    "@angular/core": "2.4.2",
+    "@angular/forms": "2.4.2",
+    "@angular/http": "2.4.2",
+    "@angular/material": "2.0.0-beta.1",
+    "@angular/platform-browser": "2.4.2",
+    "@angular/platform-browser-dynamic": "2.4.2",
+    "@angular/router": "3.4.2",
+    "@angular/upgrade": "2.4.2",
     "angular2-highlight-js": "^4.0.0",
     "colresizable": "1.6.0",
     "core-js": "^2.4.1",
@@ -33,17 +34,17 @@
     "datatables.net-select": "^1.2.0",
     "jquery": "^3.0.0",
     "jquery-ui": "^1.12.0",
-    "moment": "^2.13.0",
+    "moment": "2.17.1",
     "ng2-nvd3": "^1.1.3",
-    "ng2-translate": "2.5.0",
+    "ng2-translate": "5.0.0",
     "nvd3": "^1.8.4",
-    "ontimize-web-ng2": "1.1.0",
-	"ontimize-web-ng2-charts": "1.0.0",
+    "ontimize-web-ng2": "1.2.3",
+    "ontimize-web-ng2-charts" : "1.0.2",
     "pdfmake": "^0.1.18",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "systemjs": "0.19.38",
-    "zone.js": "0.6.23"
+    "zone.js": "0.7.4"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.10",
