--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ng2-charts",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "An implementation of nvD3 for Ontimize Web Ng2",
   "scripts": {
     "test": "tsc",
@@ -25,22 +25,30 @@
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "rxjs": "^5.0.1",
-    "zone.js": "^0.7.4",
+    "zone.js": "0.8.4",
     "d3": "^3.5.6",
     "ng2-nvd3": "^1.1.3",
     "nvd3": "^1.8.4"
   },
   "devDependencies": {
-    "@angular/common": "2.4.2",
-    "@angular/compiler": "2.4.2",
-    "@angular/core": "2.4.2",
-    "@angular/forms": "2.4.2",
-    "@angular/http": "2.4.2",
-    "@angular/material": "2.0.0-beta.1",
-    "@angular/platform-browser": "2.4.2",
-    "@angular/platform-browser-dynamic": "2.4.2",
-    "@angular/router": "3.4.2",
-    "@angular/upgrade": "2.4.2",
+    "@angular/common": "4.0.2",
+    "@angular/compiler": "4.0.2",
+    "@angular/core": "4.0.2",
+    "@angular/forms": "4.0.2",
+    "@angular/http": "4.0.2",
+    "@angular/platform-browser": "4.0.2",
+    "@angular/platform-browser-dynamic": "4.0.2",
+    "@angular/platform-server": "4.0.2",
+    "@angular/router": "4.0.2",
+    "@angular/upgrade": "4.0.2",
+    "@angular/animations": "4.0.2",
+    "typescript": "2.3.0",
+    "@angular/material": "2.0.0-beta.3",
+    "zone.js": "0.8.4",
+    "hammerjs": "2.0.8",
+    "@types/lodash": "^4.14.63",
+    "lodash": "^4.17.4",
+    "rxjs": "5.0.1",
     "async": "^2.0.0",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
@@ -51,6 +59,7 @@
     "datatables.net-buttons": "^1.2.1",
     "datatables.net-colreorder": "^1.3.2",
     "datatables.net-select": "^1.2.0",
+    "pdfmake": "^0.1.18",
     "del": "^2.2.0",
     "event-stream": "^3.3.2",
     "express": "~4.13.4",
@@ -79,23 +88,19 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.6",
-    "hammerjs": "^2.0.8",
     "jquery": "^3.0.0",
     "jquery-ui": "^1.12.0",
     "merge-stream": "^1.0.0",
     "moment": "2.17.1",
-    "ng2-dnd": "^2.2.2",
     "ng2-nvd3": "^1.1.3",
-    "ng2-translate": "5.0.0",
+    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
     "nvd3": "^1.8.4",
-    "ontimize-web-ng2": "1.2.3",
     "open": "0.0.5",
-    "pdfmake": "^0.1.18",
     "phantomjs-prebuilt": "^2.1.7",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.2",
     "run-sequence": "^1.2.1",
-    "rxjs": "5.0.1",
     "semver": "^5.1.0",
     "serve-static": "^1.10.2",
     "slash": "~1.0.0",
@@ -103,15 +108,16 @@
     "systemjs": "0.19.38",
     "systemjs-builder": "^0.15.32",
     "traceur": "^0.0.110",
-    "ts-node": "^0.7.3",
+    "ts-node": "3.0.2",
     "tslint": "^3.15.1",
     "tslint-stylish": "2.1.0-beta",
     "typedoc": "^0.3.12",
-    "typescript": "2.0.0",
-    "typings": "0.8.1",
+    "typings": "^2.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^4.7.1",
-    "zone.js": "0.7.4"
+    "@types/core-js": "^0.9.41",
+    "@types/jasmine": "^2.5.47",
+    "@types/node": "^7.0.13"
   }
 }
