--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "karma start",
     "clean": "rimraf dist",
     "webpack:dev": "npm run clean && webpack --config config/webpack.dev.js --progress",
-    "webpack:prod": "npm run clean && webpack --config config/webpack.prod.js --progress",
-    "styles": "node-sass styles.scss dist/styles.scss"
+    "webpack:prod": "npm run clean && webpack --config config/webpack.prod.js --progress"
   },
   "keywords": [
     "angular2",
@@ -33,14 +32,15 @@
     "rxjs": "^5.0.1",
     "zone.js": "0.8.10",
     "d3": "^3.5.6",
-    "ng2-nvd3": "^1.1.3",
+    "ng2-nvd3": "git+https://github.com/daominhsangvn/ng2-nvd3.git",
     "nvd3": "^1.8.4"
   },
   "devDependencies": {
     "@angular/animations": "4.1.2",
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "1.0.6",
     "@angular/common": "4.1.2",
     "@angular/compiler": "4.1.2",
+    "@angular/compiler-cli": "4.1.2",
     "@angular/core": "4.1.2",
     "@angular/forms": "4.1.2",
     "@angular/http": "4.1.2",
@@ -67,11 +67,17 @@
     "awesome-typescript-loader": "3.1.2",
     "clean-webpack-plugin": "0.1.16",
     "codelyzer": "3.0.0-beta.4",
+    "colresizable": "1.6.0",
     "commitizen": "2.9.6",
     "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^2.4.1",
     "css-loader": "^0.28.0",
     "cz-conventional-changelog": "2.0.0",
     "d3": "^3.5.6",
+    "datatables.net": "^1.10.12",
+    "datatables.net-buttons": "^1.2.1",
+    "datatables.net-colreorder": "^1.3.2",
+    "datatables.net-select": "^1.2.0",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -84,6 +90,8 @@
     "imports-loader": "^0.7.1",
     "istanbul-instrumenter-loader": "0.2.0",
     "jasmine-core": "^2.5.2",
+    "jquery": "^3.0.0",
+    "jquery-ui": "^1.12.0",
     "json-loader": "^0.5.4",
     "karma": "1.5.0",
     "karma-chrome-launcher": "2.0.0",
@@ -94,20 +102,23 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
     "loader-utils": "1.1.0",
+    "moment": "2.17.1",
     "ng-router-loader": "^2.1.0",
-    "ng2-nvd3": "^1.1.3",
+    "ng2-nvd3": "git+https://github.com/daominhsangvn/ng2-nvd3.git",
     "ngc-webpack": "~2.0.0",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "ntypescript": "^1.201609302242.1",
     "nvd3": "^1.8.4",
-    "ontimize-web-ng2": "file:///C:\\workspace\\github\\ontimize-web-ng2-VERSIONS\\1.2.4\\ontimize-web-ng2\\dist\\ontimize-web-ng2-2.0.0-rc.0.tgz",
+    "ontimize-web-ng2": "2.0.0-rc.0",
     "optimize-js-plugin": "0.0.4",
     "parse5": "^3.0.2",
+    "pdfmake": "^0.1.18",
     "protractor": "^5.1.1",
     "raw-loader": "0.5.1",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.2",
+    "rxjs": "5.0.1",
     "sass-loader": "^6.0.3",
     "script-ext-html-webpack-plugin": "^1.7.1",
     "source-map-loader": "0.2.0",
@@ -124,6 +135,7 @@
     "url-loader": "^0.5.8",
     "webpack": "2.3.1",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
-    "webpack-merge": "~4.1.0"
+    "webpack-merge": "~4.1.0",
+    "zone.js": "0.8.10"
   }
 }
