--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ontimize-web-ng2-charts",
-  "version": "2.0.0-rc.5",
+  "version": "2.0.0-rc.2",
   "description": "An implementation of nvD3 for Ontimize Web Ng2",
   "scripts": {
+    "preinstall": "npm config set package-lock false",
     "rimraf": "rimraf",
     "webpack": "webpack",
     "test": "karma start",
@@ -26,33 +27,37 @@
   "license": "Apache-2.0",
   "main": "o-chart.js",
   "typings": "o-chart.d.ts",
-  "peerDependencies": {
-    "core-js": "^2.4.1",
-    "lodash": "^4.17.4",
-    "rxjs": "^5.0.1",
-    "zone.js": "0.8.10",
+  "dependencies": {
     "d3": "^3.5.6",
     "ng2-nvd3": "git+https://github.com/daominhsangvn/ng2-nvd3.git",
     "nvd3": "^1.8.4"
   },
+  "peerDependencies": {
+    "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.12"
+  },
   "devDependencies": {
-    "@angular/animations": "4.2.4",
-    "@angular/cli": "1.0.6",
-    "@angular/common": "4.2.4",
-    "@angular/compiler": "4.2.4",
-    "@angular/compiler-cli": "4.2.4",
-    "@angular/core": "4.2.4",
-    "@angular/forms": "4.2.4",
-    "@angular/http": "4.2.4",
-    "@angular/material": "2.0.0-beta.7",
-    "@angular/platform-browser": "4.2.4",
-    "@angular/platform-browser-dynamic": "4.2.4",
-    "@angular/platform-server": "4.2.4",
-    "@angular/router": "4.2.4",
-    "@angular/upgrade": "4.2.4",
+    "@angular/animations": "4.3.3",
+    "@angular/cli": "1.2.7",
+    "@angular/common": "4.3.3",
+    "@angular/compiler": "4.3.3",
+    "@angular/compiler-cli": "4.3.3",
+    "@angular/core": "4.3.3",
+    "@angular/forms": "4.3.3",
+    "@angular/http": "4.3.3",
+    "@angular/material": "2.0.0-beta.8",
+    "@angular/cdk": "2.0.0-beta.8",
+    "@angular/flex-layout": "2.0.0-beta.8",
+    "@angular/platform-browser": "4.3.3",
+    "@angular/platform-browser-dynamic": "4.3.3",
+    "@angular/platform-server": "4.3.3",
+    "@angular/router": "4.3.3",
+    "@angular/upgrade": "4.3.3",
     "@angularclass/conventions-loader": "^1.0.13",
-    "@ngx-translate/core": "6.0.1",
-    "@ngx-translate/http-loader": "0.0.3",
+    "@ngx-translate/core": "7.1.0",
+    "@ngx-translate/http-loader": "1.0.2",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.46",
     "@types/jquery": "^2.0.43",
@@ -66,18 +71,12 @@
     "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "3.1.2",
     "clean-webpack-plugin": "0.1.16",
-    "codelyzer": "3.0.0-beta.4",
-    "colresizable": "1.6.0",
+    "codelyzer": "3.1.1",
     "commitizen": "2.9.6",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "css-loader": "^0.28.0",
     "cz-conventional-changelog": "2.0.0",
-    "d3": "^3.5.6",
-    "datatables.net": "^1.10.12",
-    "datatables.net-buttons": "^1.2.1",
-    "datatables.net-colreorder": "^1.3.2",
-    "datatables.net-select": "^1.2.0",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -90,8 +89,6 @@
     "imports-loader": "^0.7.1",
     "istanbul-instrumenter-loader": "0.2.0",
     "jasmine-core": "^2.5.2",
-    "jquery": "^3.0.0",
-    "jquery-ui": "^1.12.0",
     "json-loader": "^0.5.4",
     "karma": "1.5.0",
     "karma-chrome-launcher": "2.0.0",
@@ -102,23 +99,19 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
     "loader-utils": "1.1.0",
-    "moment": "2.17.1",
     "ng-router-loader": "^2.1.0",
-    "ng2-nvd3": "git+https://github.com/daominhsangvn/ng2-nvd3.git",
     "ngc-webpack": "~2.0.0",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "ntypescript": "^1.201609302242.1",
-    "nvd3": "^1.8.4",
-
+    "ontimize-web-ng2": "file:..\\..\\ontimize-web-ng2-VERSIONS\\2.0.0-rc.7\\ontimize-web-ng2\\dist\\ontimize-web-ng2-2.0.0-rc.7.tgz",
     "optimize-js-plugin": "0.0.4",
     "parse5": "^3.0.2",
-    "pdfmake": "^0.1.18",
     "protractor": "^5.1.1",
     "raw-loader": "0.5.1",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.2",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.4.2",
     "sass-loader": "^6.0.3",
     "script-ext-html-webpack-plugin": "^1.7.1",
     "source-map-loader": "0.2.0",
@@ -131,11 +124,11 @@
     "tslint": "5.2.0",
     "tslint-loader": "3.5.3",
     "typedoc": "^0.5.10",
-    "typescript": "2.2.0",
+    "typescript": "2.3.4",
     "url-loader": "^0.5.8",
     "webpack": "2.3.1",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
     "webpack-merge": "~4.1.0",
-    "zone.js": "0.8.10"
+    "zone.js": "^0.8.12"
   }
 }
