--- a/package.json
+++ b/package.json
@@ -1,67 +1,67 @@
 {
   "name": "ontimize-web-ng2-quickstart-charts",
-  "version": "0.0.2",
+  "version": "2.0.0-rc.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "ng server",
-    "postinstall": "typings install",
-    "lint": "tslint \"src/**/*.ts\"",
-    "format": "clang-format -i -style=file --glob=src/**/*.ts",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
-    "production": "ng build --prod"
+    "preinstall": "npm config set package-lock false",
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "clean": "rimraf dist",
+    "production": "npm run clean && ng build --aot=false --target -prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.4.2",
-    "@angular/compiler": "2.4.2",
-    "@angular/core": "2.4.2",
-    "@angular/forms": "2.4.2",
-    "@angular/http": "2.4.2",
-    "@angular/material": "2.0.0-beta.1",
-    "@angular/platform-browser": "2.4.2",
-    "@angular/platform-browser-dynamic": "2.4.2",
-    "@angular/router": "3.4.2",
-    "@angular/upgrade": "2.4.2",
-    "angular2-highlight-js": "^4.0.0",
-    "colresizable": "1.6.0",
+    "@angular/animations": "4.3.3",
+    "@angular/cdk": "2.0.0-beta.8",
+    "@angular/common": "4.3.3",
+    "@angular/compiler": "4.3.3",
+    "@angular/core": "4.3.3",
+    "@angular/flex-layout": "2.0.0-beta.8",
+    "@angular/forms": "4.3.3",
+    "@angular/http": "4.3.3",
+    "@angular/material": "2.0.0-beta.8",
+    "@angular/platform-browser": "4.3.3",
+    "@angular/platform-browser-dynamic": "4.3.3",
+    "@angular/platform-server": "4.3.3",
+    "@angular/router": "4.3.3",
+    "@angular/upgrade": "4.3.3",
+    "@ngx-translate/core": "7.1.0",
+    "@ngx-translate/http-loader": "1.0.2",
+    "angular2-highlight-js": "5.0.1",
     "core-js": "^2.4.1",
-    "d3": "^3.5.6",
-    "datatables.net": "^1.10.12",
-    "datatables.net-buttons": "^1.2.1",
-    "datatables.net-colreorder": "^1.3.2",
-    "datatables.net-select": "^1.2.0",
-    "jquery": "^3.0.0",
-    "jquery-ui": "^1.12.0",
-    "moment": "2.17.1",
-    "ng2-nvd3": "^1.1.3",
-    "ng2-translate": "5.0.0",
-    "nvd3": "^1.8.4",
-    "ontimize-web-ng2": "1.2.3",
-    "ontimize-web-ng2-charts" : "1.0.2",
-    "pdfmake": "^0.1.18",
+    "lodash": "^4.17.4",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.1",
-    "systemjs": "0.19.38",
-    "zone.js": "0.7.4"
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.12",
+    "ontimize-web-ng2": "2.0.0-rc.7",
+    "ontimize-web-ng2-charts": "2.0.0-rc.2"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.10",
-    "clang-format": "^1.0.35",
-    "codelyzer": "0.0.14",
+    "@angular/cli": "1.2.7",
+    "@angular/compiler-cli": "4.3.3",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "~6.0.60",
+    "codelyzer": "3.1.1",
+    "flag-icon-css": "^2.8.0",
+    "hammerjs": "2.0.8",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.5.0",
+    "typescript": "2.3.4",
     "ember-cli-inject-live-reload": "^1.4.0",
-    "jasmine-core": "^2.4.1",
-    "jasmine-spec-reporter": "^2.4.0",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-jasmine": "^0.3.8",
-    "node-sass": "3.7.0",
-    "protractor": "^3.3.0",
-    "systemjs-builder": "^0.15.33",
-    "ts-node": "^0.5.5",
-    "tslint": "^3.6.0",
-    "typescript": "^2.0.2",
-    "typings": "0.8.1"
+    "node-sass": "4.0.0"
   }
 }
