--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ontimize-web-ng2-charts",
+  "name": "ontimize-web-ngx-charts",
   "version": "2.0.0",
   "description": "An implementation of nvD3 for Ontimize Web Ng2",
   "scripts": {
@@ -13,12 +13,13 @@
     "webpack:dev": "npm run init-common && webpack --config config/webpack.dev.js --progress && npm run end-common",
     "webpack:prod": "npm run init-common && webpack --config config/webpack.prod.js --progress && npm run end-common",
     "aot:compile": "node_modules/.bin/ngc -p tsconfig.aot.json",
-    "aot": "npm run init-common && npm run aot:compile && npm run end-common"
+    "aot": "npm run init-common && npm run aot:compile && npm run end-common",
+    "pack": "npm run aot && cd dist && npm pack && cd .."
   },
   "keywords": [
     "angular2",
-    "ontimize-web-ng2",
-    "ontimize-web-ng2-charts",
+    "ontimize-web-ngx",
+    "ontimize-web-ngx-charts",
     "charts",
     "d3",
     "nvD3"
@@ -26,7 +27,7 @@
   "author": "IMATIA S.L.",
   "repository": {
     "type": "git",
-    "url": "git@github.com:OntimizeWeb/ontimize-web-ng2-charts.git"
+    "url": "git@github.com:OntimizeWebf/ontimize-web-ngx-charts.git"
   },
   "license": "Apache-2.0",
   "main": "./index.js",
@@ -44,7 +45,7 @@
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "ontimize-web-ng2": "2.0.0-rc.8",
+    "ontimize-web-ngx": "2.0.0",
     "@angular/animations": "4.3.6",
     "@angular/cli": "1.3.2",
     "@angular/common": "4.3.6",
