--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ontimize-web-ng2-quickstart-charts",
+  "name": "ontimize-web-ngx-quickstart-charts",
   "version": "2.0.0-rc.0",
   "license": "MIT",
   "angular-cli": {},
@@ -12,38 +12,39 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "clean": "rimraf dist",
-    "production": "npm run clean && ng build --aot=false --target -prod"
+    "production": "npm run clean && ng build --aot=false --target --base-href /ontimize-web-ngx-charts/"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.3.3",
-    "@angular/cdk": "2.0.0-beta.8",
-    "@angular/common": "4.3.3",
-    "@angular/compiler": "4.3.3",
-    "@angular/core": "4.3.3",
-    "@angular/flex-layout": "2.0.0-beta.8",
-    "@angular/forms": "4.3.3",
-    "@angular/http": "4.3.3",
-    "@angular/material": "2.0.0-beta.8",
-    "@angular/platform-browser": "4.3.3",
-    "@angular/platform-browser-dynamic": "4.3.3",
-    "@angular/platform-server": "4.3.3",
-    "@angular/router": "4.3.3",
-    "@angular/upgrade": "4.3.3",
-    "@ngx-translate/core": "7.1.0",
+    "@angular/animations": "4.3.6",
+    "@angular/cdk": "2.0.0-beta.10",
+    "@angular/common": "4.3.6",
+    "@angular/compiler": "4.3.6",
+    "@angular/core": "4.3.6",
+    "@angular/flex-layout": "2.0.0-beta.9",
+    "@angular/forms": "4.3.6",
+    "@angular/http": "4.3.6",
+    "@angular/material": "2.0.0-beta.10",
+    "@angular/platform-browser": "4.3.6",
+    "@angular/platform-browser-dynamic": "4.3.6",
+    "@angular/platform-server": "4.3.6",
+    "@angular/router": "4.3.6",
+    "@angular/upgrade": "4.3.6",
+    "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "1.0.2",
     "angular2-highlight-js": "5.0.1",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
-    "reflect-metadata": "^0.1.3",
+    "ontimize-web-ngx": "2.0.0",
+    "ontimize-web-ngx-charts": "2.0.1",
+    "ontimize-web-ngx-theming": "1.0.0",
+    "reflect-metadata": "0.1.10",
     "rxjs": "^5.4.2",
-    "zone.js": "^0.8.12",
-    "ontimize-web-ng2": "2.0.0-rc.7",
-    "ontimize-web-ng2-charts": "2.0.0-rc.2"
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.2.7",
-    "@angular/compiler-cli": "4.3.3",
+    "@angular/cli": "1.3.2",
+    "@angular/compiler-cli": "4.3.6",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "3.1.1",
