--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "2.0.0-rc.0",
+  "version": "2.0.2",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -12,7 +12,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "clean": "rimraf dist",
-    "production": "npm run clean && ng build --aot=false --target --base-href /ontimize-web-ngx-charts/"
+    "production": "npm run clean && ng build --aot=false --target --base-href /ontimize-web-ngx-charts/",
+    "production-aot": "ontimize-web-ngx production-aot --href=/ontimize-web-ngx-charts/",
+    "production-aot-server": "ontimize-web-ngx production-aot --href /ontimizeweb/charts/"
   },
   "private": true,
   "dependencies": {
@@ -35,20 +37,22 @@
     "angular2-highlight-js": "5.0.1",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
-    "ontimize-web-ngx": "2.0.0",
-    "ontimize-web-ngx-charts": "2.0.1",
-    "ontimize-web-ngx-theming": "1.0.0",
+    "ontimize-web-ngx": "2.1.0",
+    "ontimize-web-ngx-charts": "2.0.2",
+    "ontimize-web-ngx-theming": "1.0.6",
     "reflect-metadata": "0.1.10",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
+    "ontimize-web-ngx-tools": "1.0.3",
     "@angular/cli": "1.3.2",
     "@angular/compiler-cli": "4.3.6",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "3.1.1",
-    "flag-icon-css": "^2.8.0",
+    "compression-webpack-plugin": "1.0.0",
+    "flag-icon-css": "2.8.0",
     "hammerjs": "2.0.8",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
@@ -58,11 +62,10 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.5.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "2.3.4",
-    "ember-cli-inject-live-reload": "^1.4.0",
-    "node-sass": "4.0.0"
+    "tslint": "5.2.0",
+    "typescript": "2.3.4"
   }
 }
