--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "nvd3": "^1.8.4"
   },
   "peerDependencies": {
-    "core-js": "2.5.1",
+    "core-js": "2.5.3",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.18",
-    "lodash": "^4.17.4"
+    "zone.js": "0.8.20",
+    "lodash": "4.17.4"
   },
   "devDependencies": {
-    "ontimize-web-ngx": "file:C:\\workspace\\github\\ontimize-web-ng2-VERSIONS\\3.0.0-rc.0\\ontimize-web-ngx\\dist\\ontimize-web-ngx-3.0.0-rc.0.tgz",
-    "@angular/flex-layout": "5.0.0-beta.13",
+    "ontimize-web-ngx": "3.0.0-rc.0",
+    "@angular/flex-layout": "5.0.0-beta.14",
     "@angular/material": "5.2.4",
     "@angular/material-moment-adapter": "5.2.4",
     "@angular/cdk": "5.2.4",
@@ -64,66 +64,30 @@
     "@angular/cli": "1.7.3",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
-    "core-js": "2.5.1",
+    "core-js": "2.5.3",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.18",
+    "zone.js": "0.8.20",
     "reflect-metadata": "0.1.12",
-    "@angularclass/conventions-loader": "^1.0.13",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.46",
-    "@types/jquery": "^2.0.43",
-    "@types/jqueryui": "^1.11.32",
     "@types/node": "7.0.10",
-    "@types/source-map": "^0.5.0",
-    "@types/uglify-js": "^2.6.28",
-    "@types/webpack": "^2.2.15",
-    "add-asset-html-webpack-plugin": "^1.0.2",
+    "@types/source-map": "0.5.7",
+    "@types/uglify-js": "2.6.30",
+    "@types/webpack": "4.1.1",
     "angular2-template-loader": "^0.6.2",
-    "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "3.1.2",
-    "clean-webpack-plugin": "0.1.16",
-    "codelyzer": "4.2.1",
-    "commitizen": "2.9.6",
-    "cz-conventional-changelog": "2.0.0",
-    "expose-loader": "^0.7.3",
-    "find-root": "^1.0.0",
-    "gh-pages": "^0.12.0",
-    "http-server": "^0.9.0",
-    "ie-shim": "^0.1.0",
-    "imports-loader": "^0.7.1",
-    "jasmine-core": "^2.5.2",
-    "json-loader": "^0.5.4",
-    "karma": "1.5.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.1.0",
-    "karma-mocha-reporter": "2.2.3",
-    "karma-remap-coverage": "0.1.4",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.13",
-    "ng-router-loader": "^2.1.0",
     "ngc-webpack": "4.1.2",
-    "node-sass": "^4.5.2",
-    "npm-run-all": "^4.0.2",
-    "ntypescript": "^1.201609302242.1",
-    "optimize-js-plugin": "0.0.4",
-    "parse5": "^3.0.2",
-    "protractor": "^5.1.1",
-    "rimraf": "^2.5.2",
-    "script-ext-html-webpack-plugin": "^1.7.1",
-    "string-replace-loader": "2.1.1",
-    "to-string-loader": "^1.1.5",
-    "ts-helpers": "1.1.2",
-    "ts-node": "^3.0.2",
-    "tslib": "^1.6.1",
+    "node-sass": "4.7.2",
+    "rimraf": "2.6.2",
     "tslint": "5.2.0",
     "tslint-loader": "3.5.3",
-    "typedoc": "^0.5.10",
-    "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
-    "gulp": "^3.9.1",
+    "gulp": "3.9.1",
     "gulp-cssimport": "6.0.0",
-    "gulp-inline-ng2-template": "^4.0.0",
-    "gulp-replace": "^0.6.1",
-    "copyfiles": "^1.2.0"
+    "gulp-inline-ng2-template": "4.1.0",
+    "gulp-replace": "0.6.1",
+    "copyfiles": "1.2.0",
+    "webpack": "3.11.0",
+    "webpack-merge": "3.0.0",
+    "typescript": "2.4.2"
   }
 }
