--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
   "description": "An implementation of nvD3 for Ontimize Web Ng2",
   "scripts": {
     "preinstall": "npm config set package-lock false",
-    "rimraf": "rimraf",
-    "webpack": "webpack",
-    "test": "karma start",
-    "clean": "rimraf dist tmp",
-    "init-common": "npm run clean && gulp inline-templates",
-    "end-common": "gulp copy-files && gulp charts.styles",
-    "webpack:dev": "npm run init-common && webpack --config config/webpack.dev.js --progress && npm run end-common",
-    "webpack:prod": "npm run init-common && webpack --config config/webpack.prod.js --progress && npm run end-common",
-    "aot:compile": "node_modules/.bin/ngc -p tsconfig.aot.json",
-    "aot": "npm run init-common && npm run aot:compile && npm run end-common"
+    "xxx": "rimraf node_modules/ontimize-web-ngx* && npm install",
+    "pack": "npm run build && cd dist && npm pack && cd ..",
+    "clean": "o-ngx-lib-builder clean",
+    "build": "npm run clean && o-ngx-lib-builder build --package ontimize-web-ngx-charts --ng-library ng.ontimizeWebCharts"
   },
   "keywords": [
     "angular2",
@@ -40,28 +34,27 @@
   "peerDependencies": {
     "core-js": "2.5.3",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.20",
-    "lodash": "4.17.4"
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "ontimize-web-ngx": "3.0.0-rc.0",
-    "@angular/flex-layout": "5.0.0-beta.14",
+    "ontimize-web-ngx": "file:C:\\workspace\\github\\ontimize-web-ng2-VERSIONS\\3.0.0-rc.0\\ontimize-web-ngx\\dist\\ontimize-web-ngx-3.0.0-rc.0.tgz",
+    "ontimize-web-ngx-library-tools": "file:C:\\workspace\\github\\TOOLS\\ontimize-web-ngx-library-tools\\ontimize-web-ngx-library-tools-1.0.0.tgz",
+    "@angular/flex-layout": "5.0.0-beta.13",
     "@angular/material": "5.2.4",
     "@angular/material-moment-adapter": "5.2.4",
     "@angular/cdk": "5.2.4",
-    "@angular/animations": "5.2.9",
-    "@angular/common": "5.2.9",
-    "@angular/compiler": "5.2.9",
-    "@angular/compiler-cli": "5.2.9",
-    "@angular/core": "5.2.9",
-    "@angular/forms": "5.2.9",
-    "@angular/http": "5.2.9",
-    "@angular/platform-browser": "5.2.9",
-    "@angular/platform-browser-dynamic": "5.2.9",
-    "@angular/platform-server": "5.2.9",
-    "@angular/router": "5.2.9",
-    "@angular/upgrade": "5.2.9",
-    "@angular/cli": "1.7.3",
+    "@angular/animations": "5.2.10",
+    "@angular/common": "5.2.10",
+    "@angular/compiler": "5.2.10",
+    "@angular/compiler-cli": "5.2.10",
+    "@angular/core": "5.2.10",
+    "@angular/forms": "5.2.10",
+    "@angular/http": "5.2.10",
+    "@angular/platform-browser": "5.2.10",
+    "@angular/platform-browser-dynamic": "5.2.10",
+    "@angular/platform-server": "5.2.10",
+    "@angular/router": "5.2.10",
+    "@angular/upgrade": "5.2.10",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
     "core-js": "2.5.3",
@@ -74,20 +67,14 @@
     "@types/source-map": "0.5.7",
     "@types/uglify-js": "2.6.30",
     "@types/webpack": "4.1.1",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "3.1.2",
-    "ngc-webpack": "4.1.2",
     "node-sass": "4.7.2",
     "rimraf": "2.6.2",
-    "tslint": "5.2.0",
-    "tslint-loader": "3.5.3",
     "gulp": "3.9.1",
     "gulp-cssimport": "6.0.0",
     "gulp-inline-ng2-template": "4.1.0",
     "gulp-replace": "0.6.1",
     "copyfiles": "1.2.0",
     "webpack": "3.11.0",
-    "webpack-merge": "3.0.0",
     "typescript": "2.4.2"
   }
 }
