--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "rimraf dist",
     "production": "npm run clean && ng build --aot=false --target --base-href /ontimize-web-ngx-charts/",
     "production-aot": "ontimize-web-ngx production-aot --href=/ontimize-web-ngx-charts/",
-    "production-aot-server": "ontimize-web-ngx production-aot --href /ontimizeweb/charts/"
+    "production-aot-server": "ontimize-web-ngx production-aot --href /ontimizeweb/charts/",
+    "pack": "rm -r node_modules/ontimize-web-ngx-charts && npm install && npm start"
   },
   "private": true,
   "dependencies": {
@@ -37,9 +38,9 @@
     "reflect-metadata": "0.1.12",
     "angular2-highlight-js": "5.0.1",
     "lodash": "4.17.4",
-    "ontimize-web-ngx": "3.0.0-rc.1",
-    "ontimize-web-ngx-charts": "3.0.0-rc.1",
-    "ontimize-web-ngx-theming": "1.1.1"
+    "ontimize-web-ngx": "3.1.0",
+    "ontimize-web-ngx-charts": "3.1.1",
+    "ontimize-web-ngx-theming": "1.2.0"
   },
   "devDependencies": {
     "@ngtools/webpack": "1.10.2",
