--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "3.1.1",
+  "version": "4.0.0",
   "description": "An implementation of nvD3 for Ontimize Web",
   "scripts": {
     "preinstall": "npm config set package-lock false",
@@ -8,7 +8,7 @@
     "build": "npm run clean && o-ngx-lib-builder build --package ontimize-web-ngx-charts --ng-library ng.ontimizeWebCharts"
   },
   "keywords": [
-    "angular2",
+    "angular",
     "ontimize-web-ngx",
     "ontimize-web-ngx-charts",
     "charts",
@@ -27,44 +27,43 @@
   "es2015": "./esm2015/ontimize-web-ngx-charts.js",
   "typings": "./index.d.ts",
   "dependencies": {
+    "@nois/ng2-nvd3": "git+https://github.com/daominhsangvn/ng2-nvd3.git",
     "d3": "^3.5.6",
-    "ng2-nvd3": "git+https://github.com/daominhsangvn/ng2-nvd3.git",
     "nvd3": "^1.8.4"
   },
   "peerDependencies": {
     "core-js": "2.5.3",
     "rxjs": "5.5.6",
-    "zone.js": "0.8.20"
+    "moment": "2.22.2"
   },
   "devDependencies": {
-    "ontimize-web-ngx": "3.1.0",
-    "ontimize-web-ngx-library-tools": "1.0.0",
-    "@angular/flex-layout": "5.0.0-beta.13",
-    "@angular/material": "5.2.4",
-    "@angular/material-moment-adapter": "5.2.4",
-    "@angular/cdk": "5.2.4",
-    "@angular/animations": "5.2.10",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/platform-server": "5.2.10",
-    "@angular/router": "5.2.10",
-    "@angular/upgrade": "5.2.10",
-    "@ngx-translate/core": "9.1.1",
-    "@ngx-translate/http-loader": "2.0.1",
-    "core-js": "2.5.3",
-    "rxjs": "5.5.6",
-    "zone.js": "0.8.20",
+    "ontimize-web-ngx": "C:\\Users\\patricia.martinez\\Documents\\ontimize web\\ontimize-web-ngx-angular6\\dist\\ontimize-web-ngx-4.0.0-rc.0.tgz",
+    "ontimize-web-ngx-library-tools": "C:\\Users\\patricia.martinez\\Documents\\ontimize web\\ontimize-web-ngx-library-tools\\ontimize-web-ngx-library-tools-2.0.0.tgz",
+    "@angular/flex-layout": "6.0.0-beta.18",
+    "@angular/material": "6.4.7",
+    "@angular/material-moment-adapter": "6.4.7",
+    "@angular/cdk": "6.4.7",
+    "@angular/animations": "6.1.10",
+    "@angular/common": "6.1.10",
+    "@angular/compiler": "6.1.10",
+    "@angular/compiler-cli": "6.1.10",
+    "@angular/core": "6.1.10",
+    "@angular/forms": "6.1.10",
+    "@angular/http": "6.1.10",
+    "@angular/platform-browser": "6.1.10",
+    "@angular/platform-browser-dynamic": "6.1.10",
+    "@angular/platform-server": "6.1.10",
+    "@angular/router": "6.1.10",
+    "@angular/upgrade": "6.1.10",
+    "@ngx-translate/core": "10.0.2",
+    "@ngx-translate/http-loader": "3.0.1",
+    "core-js": "2.5.7",
+    "rxjs": "6.3.3",
+    "zone.js": "0.8.26",
     "reflect-metadata": "0.1.12",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.46",
     "@types/node": "7.0.10",
-    "@types/source-map": "0.5.7",
     "@types/uglify-js": "2.6.30",
     "@types/webpack": "4.1.1",
     "node-sass": "4.7.2",
@@ -75,6 +74,6 @@
     "gulp-replace": "0.6.1",
     "copyfiles": "1.2.0",
     "webpack": "3.11.0",
-    "typescript": "2.4.2"
+    "typescript": "2.9.2"
   }
 }
