Upgrade to angular v6

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "preinstall": "npm config set package-lock false",
     "ng": "ng",
     "start": "ng serve",
     "clean": "rimraf dist",
@@ -14,47 +13,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/cdk": "5.2.4",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/flex-layout": "5.0.0-beta.13",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/material": "5.2.4",
-    "@angular/material-moment-adapter": "5.2.4",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@angular/platform-server": "5.2.10",
-    "@angular/router": "5.2.10",
-    "@angular/upgrade": "5.2.10",
-    "@ngx-translate/core": "9.1.1",
-    "@ngx-translate/http-loader": "2.0.1",
-    "core-js": "2.5.3",
-    "rxjs": "5.5.6",
-    "zone.js": "0.8.20",
+    "@angular/animations": "6.1.10",
+    "@angular/cdk": "6.4.7",
+    "@angular/common": "6.1.10",
+    "@angular/compiler": "6.1.10",
+    "@angular/core": "6.1.10",
+    "@angular/flex-layout": "6.0.0-beta.18",
+    "@angular/forms": "6.1.10",
+    "@angular/http": "6.1.10",
+    "@angular/material": "6.4.7",
+    "@angular/material-moment-adapter": "6.4.7",
+    "@angular/platform-browser": "6.1.10",
+    "@angular/platform-browser-dynamic": "6.1.10",
+    "@angular/platform-server": "6.1.10",
+    "@angular/router": "6.1.10",
+    "@angular/upgrade": "6.1.10",
+    "@ngx-translate/core": "10.0.2",
+    "@ngx-translate/http-loader": "3.0.1",
+    "core-js": "2.5.7",
+    "rxjs": "6.3.3",
+    "zone.js": "0.8.26",
     "reflect-metadata": "0.1.12",
     "angular2-highlight-js": "5.0.1",
-    "lodash": "4.17.4",
-    "ontimize-web-ngx": "3.1.1",
-    "ontimize-web-ngx-charts": "3.1.2",
+    "ontimize-web-ngx": "file:C:/Users/manuel.cid/Downloads/ontimize-web-ngx-4.0.0-rc.0.tgz",
+    "ontimize-web-ngx-charts": "file:F:/workspaceAngular/ontimize-web-ngx-charts/dist/ontimize-web-ngx-charts-4.0.0.tgz",
     "ontimize-web-ngx-theming": "1.2.0"
   },
   "devDependencies": {
-    "@ngtools/webpack": "1.10.2",
-    "@angular/cli": "1.7.3",
-    "@angular/compiler-cli": "5.2.10",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "compression-webpack-plugin": "1.0.0",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@ngtools/webpack": "6.1.5",
+    "@angular/cli": "6.2.6",
+    "@angular/compiler-cli": "6.1.10",
+    "@types/jasmine": "2.5.46",
+    "@types/node": "7.0.10",
+    "compression-webpack-plugin": "1.1.12",
     "flag-icon-css": "2.9.0",
     "html-webpack-plugin": "3.2.0",
     "jasmine-spec-reporter": "~3.2.0",
     "node-sass": "4.7.2",
     "ontimize-web-ngx-tools": "1.0.6",
     "ts-node": "~2.0.0",
-    "typescript": "2.4.2",
-    "webpack": "3.11.0"
+    "typescript": "2.9.2",
+    "webpack": "4.21.0"
   }
 }
