--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "ng": "ng",
     "start": "ng serve",
     "clean": "rimraf dist",
-    "production": "npm run clean && ng build --aot=false --target --base-href /ontimize-web-ngx-charts/",
-    "production-aot": "ontimize-web-ngx production-aot --href=/ontimize-web-ngx-charts/",
-    "production-aot-server": "ontimize-web-ngx production-aot --href /ontimizeweb/charts/"
+    "production": "npm run clean && ng build --aot false --build-optimizer false --prod --base-href /ontimize-web-ngx-charts/",
+    "production-aot": "ontimize-web-ngx production-aot --project-name ontimize-web-ngx-quickstart-charts --href /ontimize-web-ngx-quickstart-charts/",
+    "production-aot-server": "ontimize-web-ngx production-aot --project-name ontimize-web-ngx-quickstart-charts --href /ontimizeweb/charts/"
   },
   "private": true,
   "dependencies": {
@@ -35,15 +35,15 @@
     "zone.js": "0.8.26",
     "reflect-metadata": "0.1.12",
     "angular2-highlight-js": "5.0.1",
-    "ontimize-web-ngx": "file:C:/Users/manuel.cid/Downloads/ontimize-web-ngx-4.0.0-rc.0.tgz",
+    "ontimize-web-ngx": "file:F:/Docs/OntimizeWeb/v4/ontimize-web-ngx-4.0.0-rc.0.tgz",
     "ontimize-web-ngx-charts": "file:F:/workspaceAngular/ontimize-web-ngx-charts/dist/ontimize-web-ngx-charts-4.0.0.tgz",
     "ontimize-web-ngx-theming": "1.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
-    "@ngtools/webpack": "6.1.5",
     "@angular/cli": "6.2.6",
     "@angular/compiler-cli": "6.1.10",
+    "@ngtools/webpack": "6.1.5",
     "@types/jasmine": "2.5.46",
     "@types/node": "7.0.10",
     "compression-webpack-plugin": "1.1.12",
@@ -51,9 +51,10 @@
     "html-webpack-plugin": "3.2.0",
     "jasmine-spec-reporter": "~3.2.0",
     "node-sass": "4.7.2",
-    "ontimize-web-ngx-tools": "1.0.6",
+    "ontimize-web-ngx-tools": "file:F:/workspaceAngular/ontimize-web-ngx-tools/ontimize-web-ngx-tools-2.0.0.tgz",
     "ts-node": "~2.0.0",
     "typescript": "2.9.2",
-    "webpack": "4.21.0"
+    "webpack": "4.21.0",
+    "webpack-cli": "3.1.0"
   }
 }
