--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "strictPropertyInitialization": false,
+    "types": [
+      "node"
+    ],
     "target": "es5",
-    "module": "es2015",
+    "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -10,8 +14,8 @@
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "lib": [
-      "es2015",
-      "dom"
+      "dom",
+      "es6"
     ],
     "baseUrl": "tmp-src",
     "typeRoots": [
