--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "@angular/upgrade": "5.2.10",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
-    "core-js": "2.5.3",
-    "rxjs": "5.5.6",
-    "zone.js": "0.8.20",
-    "reflect-metadata": "0.1.12",
     "angular2-highlight-js": "5.0.1",
+    "core-js": "2.5.3",
     "lodash": "4.17.4",
     "ontimize-web-ngx": "3.1.1",
-    "ontimize-web-ngx-charts": "3.1.2",
-    "ontimize-web-ngx-theming": "1.2.0"
+    "ontimize-web-ngx-charts": "3.1.3",
+    "ontimize-web-ngx-theming": "1.2.0",
+    "reflect-metadata": "0.1.12",
+    "rxjs": "5.5.6",
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@ngtools/webpack": "1.10.2",
