--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "3.1.2",
+  "version": "3.2.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -34,8 +34,8 @@
     "angular2-highlight-js": "5.0.1",
     "core-js": "2.5.3",
     "lodash": "4.17.4",
-    "ontimize-web-ngx": "3.1.1",
-    "ontimize-web-ngx-charts": "3.1.3",
+    "ontimize-web-ngx": "3.2.1",
+    "ontimize-web-ngx-charts": "3.1.4-rc.0",
     "ontimize-web-ngx-theming": "1.2.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "5.5.6",
