--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "4.0.0-rc.1",
+  "version": "4.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -34,9 +34,9 @@
     "rxjs": "6.3.3",
     "zone.js": "0.8.26",
     "reflect-metadata": "0.1.12",
-    "ontimize-web-ngx": "4.0.0-rc.1",
-    "ontimize-web-ngx-charts": "4.0.0-rc.1",
-    "ontimize-web-ngx-theming": "4.0.0-rc.1",
+    "ontimize-web-ngx": "4.0.0",
+    "ontimize-web-ngx-charts": "4.0.0",
+    "ontimize-web-ngx-theming": "4.0.0",
     "classlist.js": "^1.1.20150312",
     "intl": "^1.2.5",
     "web-animations-js": "^2.3.1",
@@ -52,7 +52,7 @@
     "copy-webpack-plugin": "4.5.4",
     "html-webpack-plugin": "4.0.0-beta.2",
     "node-sass": "4.9.4",
-    "ontimize-web-ngx-tools": "4.0.0-rc.0",
+    "ontimize-web-ngx-tools": "4.0.0",
     "ts-node": "~2.0.0",
     "typescript": "2.9.2",
     "webpack": "4.18.0",
