--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,9 @@
               "**/node_modules/**"
             ]
           }
+        },
+        "configurations": {
+          "extractCss": true
         }
       }
     }},
