--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     }
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
+    "fullTemplateTypeCheck": false,
     "strictInjectionParameters": true
   }
 }
