--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.0.0",
+  "version": "8.0.0-SNAPSHOT-0",
   "dependencies": {
     "d3": "3.5.17",
     "nvd3": "1.8.6",
