--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "es2015",
+    "module": "esnext",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -10,7 +10,7 @@
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "lib": [
-      "es2015",
+      "es2018",
       "dom"
     ],
     "baseUrl": "tmp-src",
