--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "d3": "3.5.17",
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
-    "ontimize-web-ngx": "8.0.0-rc.1",
-    "ontimize-web-ngx-nvd3": "8.0.0-SNAPSHOT-0",
+    "nvd3-extra": "1.0.0",
+    "ontimize-web-ngx": "8.0.0",
+    "ontimize-web-ngx-nvd3": "8.0.0-SNAPSHOT-1",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
     "zone.js": "0.9.1"
