Updating ontimize charting dependencies

--- a/package.json
+++ b/package.json
@@ -30,18 +30,19 @@
     "@angular/platform-server": "8.2.8",
     "@angular/router": "8.2.8",
     "@angular/upgrade": "8.2.8",
+    "angular2-highlight-js": "5.0.1",
+    "classlist.js": "^1.1.20150312",
     "core-js": "3.6.4",
+    "intl": "^1.2.5",
+    "ontimize-web-ngx": "8.0.0",
+    "ontimize-web-ngx-charts": "8.0.0-SNAPSHOT-2",
+    "ontimize-web-ngx-nvd3": "8.0.0-SNAPSHOT-1",
+    "ontimize-web-ngx-theming": "4.0.2",
+    "reflect-metadata": "0.1.12",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "reflect-metadata": "0.1.12",
-    "ontimize-web-ngx": "8.0.0-rc.0",
-    "ontimize-web-ngx-charts": "8.0.0-rc.0",
-    "ontimize-web-ngx-theming": "4.0.2",
-    "classlist.js": "^1.1.20150312",
-    "intl": "^1.2.5",
     "web-animations-js": "^2.3.2",
-    "angular2-highlight-js": "5.0.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
