--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -1,11 +1,27 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.0.0-SNAPSHOT-2",
+  "version": "8.0.0",
+  "description": "An implementation of nvD3 for Ontimize Web",
+  "keywords": [
+    "angular",
+    "ontimize-web-ngx",
+    "ontimize-web-ngx-charts",
+    "charts",
+    "d3",
+    "nvD3"
+  ],
+  "author": "IMATIA S.L.",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:OntimizeWeb/ontimize-web-ngx-charts.git"
+  },
+  "license": "Apache-2.0",
+  "main": "./bundles/ontimize-web-ngx-charts.umd.js",
   "dependencies": {
     "d3": "3.5.17",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx-nvd3": "8.0.0-SNAPSHOT-1"
+    "ontimize-web-ngx-nvd3": "8.0.0"
   },
   "peerDependencies": {
     "ontimize-web-ngx": "8.0.0"
