Added new option menu "About"

--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "core-js": "3.6.4",
     "intl": "^1.2.5",
     "ontimize-web-ngx": "8.0.0",
-    "ontimize-web-ngx-charts": "8.0.0-SNAPSHOT-2",
-    "ontimize-web-ngx-nvd3": "8.0.0-SNAPSHOT-1",
+    "ontimize-web-ngx-charts": "8.0.0",
     "ontimize-web-ngx-theming": "4.0.2",
     "reflect-metadata": "0.1.12",
     "rxjs": "~6.4.0",
