Update ontimize-web-ngx version

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
     "reflect-metadata": "0.1.12",
-    "ontimize-web-ngx": "8.0.0-rc.1",
-    "ontimize-web-ngx-charts": "8.0.0-SNAPSHOT-1",
+    "ontimize-web-ngx": "8.0.0",
+    "ontimize-web-ngx-charts": "8.0.0",
     "ontimize-web-ngx-theming": "4.0.2",
     "classlist.js": "^1.1.20150312",
     "intl": "^1.2.5",
