--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
+    "test-ci": "ng test --no-watch --code-coverage --browsers ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -52,7 +53,7 @@
     "@angular-devkit/build-angular": "~0.803.22",
     "@angular-devkit/build-ng-packagr": "~0.803.22",
     "@angular-devkit/build-optimizer": "~0.803.23",
-    "@angular/cli": "~8.3.21",
+    "@angular/cli": "~8.3.29",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/hammerjs": "~2.0.36",
@@ -68,8 +69,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.4.0",
-    "ng-packagr": "4.1.0",
-    "protractor": "~5.4.0",
+    "karma-sonarqube-unit-reporter": "0.0.23",
+    "ng-packagr": "^5.4.0",
+    "protractor": "~7.0.0",
+    "sonarqube-scanner": "^2.8.1",
     "scss-bundle": "3.1.1",
     "ts-node": "~7.0.0",
     "tsickle": "~0.37.0",
