--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "d3": "3.5.17",
+    "dom-to-image": "^2.6.0",
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx": "8.8.0",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-8.9.0-SNAPSHOT-0.tgz",
     "ontimize-web-ngx-nvd3": "8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
