--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -21,7 +21,8 @@
     "d3": "3.5.17",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx-nvd3": "8.0.0"
+    "ontimize-web-ngx-nvd3": "8.0.0",
+    "dom-to-image": "^2.6.0"
   },
   "peerDependencies": {
     "ontimize-web-ngx": "8.0.0"
