--- a/projects/ontimize-web-ngx-charts/tsconfig.lib.json
+++ b/projects/ontimize-web-ngx-charts/tsconfig.lib.json
@@ -1,25 +1,35 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/lib",
+    "baseUrl": "./",
     "target": "es2015",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": false,
     "declaration": true,
-    "inlineSources": true,
-    "types": [],
+    "noImplicitReturns": true,
+    "listFiles": true,
+    "pretty": true,
+    "stripInternal": true,
+    "outDir": "dist",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "lib": [
       "dom",
-      "es2018"
-    ]
-  },
-  "angularCompilerOptions": {
-    "skipTemplateCodegen": true,
-    "strictMetadataEmit": true,
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "enableResourceInlining": true
+      "es2015"
+    ],
   },
   "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
-  ]
+    "node_modules",
+    "dist"
+  ],
+  "include": [
+    "src/lib/ontimize-web-ngx-charts.module.ts"
+  ],
+  "angularCompilerOptions": {
+    "skipMetadataEmit": false,
+    "strictMetadataEmit": true
+  }
 }
