--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,36 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "esnext",
+    "outDir": "../../out-tsc/lib",
+    "target": "es2015",
+    "module": "es2015",
     "moduleResolution": "node",
+    "declaration": true,
+    "sourceMap": true,
+    "inlineSources": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2015",
+    "allowSyntheticDefaultImports": true,
+    "types": [
+      "hammerjs",
+      "jasmine",
+      "node"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2018",
-      "dom"
-    ],
-    "paths": {
-      "ontimize-web-ngx-charts": [
-        "dist/ontimize-web-ngx-charts"
-      ],
-      "ontimize-web-ngx-charts/*": [
-        "dist/ontimize-web-ngx-charts/*"
-      ]
-    }
+      "dom",
+      "es2018"
+    ]
+  },
+  "angularCompilerOptions": {
+    "annotateForClosureCompiler": false,
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableResourceInlining": true
   }
 }
