Added workflows and configuration (#78)
* Added workflows and configuration

* Fix configuration of tsconfig for testing

* Fixes NodeJS 12 actions

* Update tsconfig configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,36 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "importHelpers": true,
+    "outDir": "../../out-tsc/lib",
     "target": "es2015",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "declaration": true,
+    "sourceMap": true,
+    "inlineSources": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "allowSyntheticDefaultImports": true,
+    "types": [
+      "hammerjs",
+      "jasmine",
+      "node"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2018",
-      "dom"
-    ],
-    "paths": {
-      "ontimize-web-ngx-charts": [
-        "dist/ontimize-web-ngx-charts"
-      ],
-      "ontimize-web-ngx-charts/*": [
-        "dist/ontimize-web-ngx-charts/*"
-      ]
-    }
+      "dom",
+      "es2018"
+    ]
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": false,
-    "strictInjectionParameters": true
+    "annotateForClosureCompiler": false,
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableResourceInlining": true
   }
 }
