--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -22,7 +22,9 @@
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
     "ontimize-web-ngx-nvd3": "8.0.0",
-    "dom-to-image": "^2.6.0"
+    "dom-to-image": "^2.6.0",
+    "lottie-web": "^5.10.0",
+    "ngx-lottie": "7.0.4"
   },
   "peerDependencies": {
     "ontimize-web-ngx": "8.0.0"
